// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyAccountScreen renders the component with account 1`] = `
<MyAccount
  creationSteps={
    Array [
      Object {
        "creationStatus": null,
        "name": "Account created",
        "percentage": 0.25,
        "status": "done",
      },
      Object {
        "creationStatus": "FUNDING_WITH_ETH",
        "name": "Funded with ETH",
        "percentage": 0.25,
        "status": "done",
      },
      Object {
        "creationStatus": "FUNDING_WITH_MANA",
        "name": "Funded with MANA tokens",
        "percentage": 0.25,
        "status": "missing",
      },
      Object {
        "creationStatus": "APPROVING_MARKETPLACE",
        "name": "Linked to marketplace",
        "percentage": 0.25,
        "status": "missing",
      },
    ]
  }
  progress={0.5}
/>
`;

exports[`MyAccountScreen renders the component without account 1`] = `
<MyAccount
  creationSteps={
    Array [
      Object {
        "creationStatus": null,
        "name": "Account created",
        "percentage": 0.25,
        "status": "missing",
      },
      Object {
        "creationStatus": "FUNDING_WITH_ETH",
        "name": "Funded with ETH",
        "percentage": 0.25,
        "status": "missing",
      },
      Object {
        "creationStatus": "FUNDING_WITH_MANA",
        "name": "Funded with MANA tokens",
        "percentage": 0.25,
        "status": "missing",
      },
      Object {
        "creationStatus": "APPROVING_MARKETPLACE",
        "name": "Linked to marketplace",
        "percentage": 0.25,
        "status": "missing",
      },
    ]
  }
  progress={0}
/>
`;
